diesel_compile_tests/tests/fail/derive/no_column.stderr
error[E0425]: cannot find type `name` in module `users`
  --> tests/fail/derive/no_column.rs:13:5
   |
LL |     name: String,
   |     ^^^^ not found in `users`

error[E0425]: cannot find value `name` in module `users`
  --> tests/fail/derive/no_column.rs:13:5
   |
LL |     name: String,
   |     ^^^^ not found in `users`

error[E0425]: cannot find type `name` in module `users`
  --> tests/fail/derive/no_column.rs:21:28
   |
LL |     #[diesel(column_name = name)]
   |                            ^^^^ not found in `users`

error[E0425]: cannot find value `name` in module `users`
  --> tests/fail/derive/no_column.rs:21:28
   |
LL |     #[diesel(column_name = name)]
   |                            ^^^^ not found in `users`

error[E0425]: cannot find type `name` in module `users`
  --> tests/fail/derive/no_column.rs:29:41
   |
LL | struct UserTuple(#[diesel(column_name = name)] String);
   |                                         ^^^^ not found in `users`

error[E0425]: cannot find value `name` in module `users`
  --> tests/fail/derive/no_column.rs:29:41
   |
LL | struct UserTuple(#[diesel(column_name = name)] String);
   |                                         ^^^^ not found in `users`
For more information about this error, try `rustc --explain E0425`.
